--- a/src/Maklarresurs/UserBundle/Resources/views/Order/extras.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/Order/extras.html.twig
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="{{ asset('bundles/mrfmadmin/css/unicorn.css') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/mrfmadmin/css/unicorn.red.css') }}" class="skin-color" />
 
+    <style>
+        .form-horizontal .control-label {
+            padding-top: 10px;
+        }
+    </style>
 {% endblock %}
 
 
@@ -83,7 +88,7 @@
 
 
                             <div class="form-actions">
-                                <input type="submit" value="NEXT" class="btn btn-primary">
+                                <input type="submit" value="NEXT" class="btn btn-dark-red">
                             </div>
 
 
