--- a/src/Maklarresurs/UserBundle/Resources/views/Order/zoneMap.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/Order/zoneMap.html.twig
@@ -38,7 +38,7 @@
 
                     <div id="form_district" style="float: right; position: relative; width: 20%; margin: 10px; height: 100px;">
                         <form action="{{ path('user_address') }}" method="get">
-                            <input type="submit" value="NEXT">
+                            <input type="submit" value="NEXT" class="btn btn-dark-red">
                         </form>
                     </div>
                 </div>
