--- a/src/Maklarresurs/UserBundle/Resources/views/Order/overview.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/Order/overview.html.twig
@@ -13,37 +13,8 @@
     <link rel="stylesheet" href="{{ asset('bundles/mrfmadmin/css/unicorn.red.css') }}" class="skin-color" />
 
     <style>
-        input[type="file"] {
-            width: 320px;
-            height: 35px;
-            border: 1px solid #BBB;
-            /*border-right: 0;*/
-            color: #888;
-            padding: 5px;
-
-            -webkit-border-top-left-radius: 5px;
-            -webkit-border-bottom-left-radius: 5px;
-            -moz-border-radius-topleft: 5px;
-            -moz-border-radius-bottomleft: 5px;
-            border-top-left-radius: 5px;
-            border-bottom-left-radius: 5px;
-
-            outline: none;
-        }
-        .upload{
-            height: 34px;
-            margin-left: -4px;
-            margin-top: 2px;
-            border-top-right-radius: 3px;
-            border-bottom-right-radius: 3px;
-            background-color: #914DCF;
-            color: white;
-            font-size: 15px;
-            font-weight: bold;
-            border: none;
-        }
-        form{
-            margin-bottom: 20px;
+        .form-horizontal .control-label {
+            padding-top: 10px;
         }
     </style>
 
@@ -57,7 +28,8 @@
         </div>
         <div id="breadcrumb">
             <a href="#" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a>
-            <a href="#" class="current">Creating Order</a>
+            <a href="#" class="">Creating Order</a>
+            <a href="#" class="current">Overview</a>
         </div>
         <div class="row">
             <div class="col-xs-12">
@@ -66,24 +38,48 @@
                         <span class="icon">
                             <i class="icon-align-justify"></i>
                         </span>
-                        <h5>Creating Order</h5>
+                        <h5>Overview</h5>
                     </div>
                     <div class="widget-content nopadding">
 
-                        <form class="form-horizontal" action="{{ path('lappning_file_uploads_create', {'id': lappningId}) }}" method="post" {{ form_enctype(form) }}>
+                        <form class="form-horizontal" method="post" action="{{ path('user_lappning_order_confirmation', {'id': entity.id}) }}">
                             <div class="form-group">
-                                <label class="control-label">Upload File : </label>
+                                <label class="control-label">Zone : </label>
                                 <div class="controls">
-                                    {{ form_widget(form.image) }}
-                                    {{ form_widget(form._token) }}
+                                    {{ entity.zone }}
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Districts : </label>
+                                <div class="controls">
+                                    {{ entity.districts }}
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Flyers : </label>
+                                <div class="controls">
+                                    Total {{ entity.flyers }}st
                                 </div>
                             </div>
 
-                            <div class="form-actions">
-                                <input type="submit" value="NEXT" class="btn btn-dark-red">
+                            <div class="form-group">
+                                <label class="control-label">Paper Size : </label>
+                                <div class="controls">
+                                    {{ entity.paperSize }}
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="control-label">Address Type: </label>
+                                <div class="controls">
+                                    {{ entity.addressType }}
+                                </div>
                             </div>
 
 
+                            <div class="form-actions">
+                                <input type="submit" value="CONFIRM" class="btn btn-dark-red">
+                            </div>
                         </form>
                     </div>
                 </div>
