--- a/src/Maklarresurs/UserBundle/Resources/views/layout.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/layout.html.twig
@@ -32,6 +32,13 @@
                     <li><a href="{{ path('user_zones') }}">Create Order</a></li>
                 </ul>
             </li>
+            <li class="submenu">
+                <a href="#"><i class="icon-beaker"></i> <span>BOKA-VISNINGSVARD</span> <i class="arrow icon-chevron-right"></i></a>
+                <ul>
+                    <li><a href="{{ path('user_boka_visningsvard_order') }}">View Orders</a></li>
+                    <li><a href="{{ path('user_boka_visningsvard_order_new') }}">Create Order</a></li>
+                </ul>
+            </li>
         </ul>
 
     </div>
