--- a/src/Maklarresurs/UserBundle/Resources/views/BokaVisningsvard/new.html.twig
+++ b/src/Maklarresurs/UserBundle/Resources/views/BokaVisningsvard/new.html.twig
@@ -10,11 +10,24 @@
     <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/icheck/flat/blue.css') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/select2.css') }}" />
     <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/unicorn.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/unicorn.blue.css') }}" class="skin-color" />
+    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/unicorn.red.css') }}" class="skin-color" />
+
+    <link rel="stylesheet" type="text/css" href="https://jonthornton.github.io/jquery-timepicker/jquery.timepicker.css" />
+    <link rel="stylesheet" href="{{ asset('bundles/maklarresursadmin/css/datepicker.css') }}" />
 
     <style>
         .form-horizontal .control-label {
             padding-top: 10px;
+        }
+        input.time{
+            width: 90px;
+        }
+        input.date{
+            width: 120px;
+        }
+        textarea{
+            width: 450px;
+            height: 80px;
         }
     </style>
 {% endblock %}
@@ -23,7 +36,7 @@
 {% block body %}
     <div id="content">
         <div id="content-header">
-            <h1>LAPPNING</h1>
+            <h1>BOKA-VISNINGSVARD</h1>
         </div>
         <div id="breadcrumb">
             <a href="#" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a>
@@ -40,55 +53,60 @@
                     </div>
                     <div class="widget-content nopadding">
 
-                        <form class="form-horizontal" method="post" action="{{ path('user_order_create') }}">
+                        <form class="form-horizontal" method="post" action="{{ path('user_boka_visningsvard_order_create') }}">
                             <div class="form-group">
-                                <label class="control-label">Zone : </label>
+                                <label class="control-label">Booking Time : </label>
                                 <div class="controls">
-                                    Vasastan
-                                    <input type="hidden" name="zone" value="Vasastan">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label">Districts : </label>
-                                <div class="controls">
-                                    {{ districts }}
-                                    <input type="hidden" name="districts" value="{{ districts }}">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label">Flyers : </label>
-                                <div class="controls">
-                                    Total {{ flyers }}st
-                                    <input type="hidden" name="flyers" value="{{ flyers }}">
+                                    <p id="workingTime">
+                                        <input type="text" class="date start" name="startDate" placeholder="Start Date" required="" />
+                                        <input type="text" class="time start" name="startTime" placeholder="Start Time" required=""/> to
+                                        <input type="text" class="time end" name="endTime" placeholder="End Time" required=""/>
+                                        <input type="text" class="date end" name="endDate" placeholder="End Date" required=""/>
+                                    </p>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="control-label">Select Paper Size : </label>
+                                <label class="control-label">Address : </label>
                                 <div class="controls">
-                                    <select name="paper_size">
-                                        <option>200g</option>
-                                        <option>150g</option>
-                                        <option>250g</option>
-                                        <option>300g</option>
-                                    </select>
+                                    <textarea name="address" required=""></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Note : </label>
+                                <div class="controls">
+                                    <textarea name="note" required=""></textarea>
                                 </div>
                             </div>
 
-                            <div class="form-group">
-                                <label class="control-label">Select Address Type: </label>
-                                <div class="controls">
-                                    <select name="address_type">
-                                        <option></option>
-                                        <option>Adresserat</option>
-                                        <option>Oadresserat</option>
-                                    </select>
-                                </div>
-                            </div>
+
+                            <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+                            <script type="text/javascript" src="http://jonthornton.github.io/Datepair.js/dist/datepair.js"></script>
+                            <script>
+
+                                jQuery(function($){
+                                    // initialize input widgets first
+                                    $('#workingTime .time').timepicker({
+                                        'showDuration': true,
+                                        'timeFormat': 'g:ia'
+                                    });
+
+                                    $('#workingTime .date').datepicker({
+                                        'format': 'm/d/yyyy',
+                                        'autoclose': true
+                                    });
+
+                                    // initialize datepair
+                                    var workingTimeEl = document.getElementById('workingTime');
+                                    var datepair = new Datepair(workingTimeEl);
+                                });
+
+                            </script>
+
 
 
                             <div class="form-actions">
-                                <input type="submit" value="NEXT" class="btn btn-dark-red">
+                                <input type="submit" value="Create" class="btn btn-dark-red">
                             </div>
 
 
@@ -102,7 +120,6 @@
 
 {% block javascripts %}
     <!-- ***************** - JavaScript Starts Here - ***************** -->
-    <script src="{{ asset('bundles/maklarresursadmin/js/jquery.min.js') }}"></script>
     <script src="{{ asset('bundles/maklarresursadmin/js/jquery-ui.custom.js') }}"></script>
     <script src="{{ asset('bundles/maklarresursadmin/js/bootstrap.min.js') }}"></script>
     <script src="{{ asset('bundles/maklarresursadmin/js/jquery.icheck.min.js') }}"></script>
@@ -112,6 +129,10 @@
     <script src="{{ asset('bundles/maklarresursadmin/js/jquery.nicescroll.min.js') }}"></script>
     <script src="{{ asset('bundles/maklarresursadmin/js/unicorn.js') }}"></script>
     <script src="{{ asset('bundles/maklarresursadmin/js/unicorn.tables.js') }}"></script>
+
+    <script src="https://jonthornton.github.io/jquery-timepicker/jquery.timepicker.js"></script>
+    <script src="http://jonthornton.github.io/Datepair.js/lib/bootstrap-datepicker.js"></script>
+
 
 
 {% endblock %}
